--- a/ColorVision/MainWindow.xaml
+++ b/ColorVision/MainWindow.xaml
@@ -94,7 +94,7 @@
                     <TabControl x:Name="LeftTabControl" Style="{StaticResource TabControlBaseStyle}" BorderThickness="0" Background="{DynamicResource GlobalBackground}" SelectedIndex="{Binding LeftTabControlSelectedIndex}"  TabStripPlacement="Bottom"  Width="303">
                         <TabItem x:Name="SolutionTab1" Header="{x:Static properties:Resources.Project}" Background="{DynamicResource GlobalBackground}"  Width="150" />
                         <TabItem x:Name="ViewTab" Header="{x:Static properties:Resources.Acquire}" Background="{DynamicResource GlobalBackground}"  Width="150" >
-                            <ScrollViewer x:Name="ScrollViewerDisplay" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
+                            <ScrollViewer x:Name="ScrollViewerDisplay" HorizontalScrollBarVisibility="Auto"  Background="{DynamicResource GlobalBorderBrush1}" VerticalScrollBarVisibility="Auto" >
                                 <StackPanel x:Name="StackPanelSPD" Margin="-2,5,0,0">
                                 </StackPanel> 
                             </ScrollViewer>
