--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
@@ -81,7 +81,21 @@
                                 <CheckBox Content="{x:Static properties:Resources.AdaptiveZeroCalibration}" IsChecked="{Binding Config.IsShutter}"/>
                             </UniformGrid>
                         </StackPanel>
+                        <DockPanel Visibility="{Binding Config.IsLuminousFluxMode,Converter={StaticResource bool2VisibilityConverter}}">
+                            <StackPanel Orientation="Horizontal">
+                                <DockPanel >
+                                    <TextBlock  Text="{x:Static properties:Resources.V}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
+                                    <TextBlock  DockPanel.Dock="Right" Text="V" Width="30" Block.TextAlignment="Center"/>
+                                    <TextBox  Text="{Binding DisplayConfig.V, StringFormat={}{0:F1}}" BorderThickness="0,0,0,1"  Width="50"/>
+                                </DockPanel>
+                                <DockPanel>
+                                    <TextBlock  Text="{x:Static properties:Resources.I}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
+                                    <TextBlock  DockPanel.Dock="Right" Text="mA" Width="30" Block.TextAlignment="Center"/>
+                                    <TextBox  Text="{Binding DisplayConfig.I, StringFormat={}{0:F1}}" BorderThickness="0,0,0,1"  Width="50"/>
 
+                                </DockPanel>
+                            </StackPanel>
+                        </DockPanel>
                         <StackPanel Margin="0,0,0,5">
                             <StackPanel  Orientation="Horizontal">
                                 <Button x:Name="btn_oneTest" Content="{x:Static properties:Resources.SingleTest}"  Margin="2" Click="Button_Click_OneTest"/>
@@ -116,22 +130,7 @@
                                 </Button>
 
                             </DockPanel>
-                            <DockPanel>
-                                <Button DockPanel.Dock="Right" Content="EQE"  Margin="2" Click="GetEQE_Click"/>
-                                <StackPanel Orientation="Horizontal">
-                                    <DockPanel >
-                                        <TextBlock  Text="{x:Static properties:Resources.V}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
-                                        <TextBlock  DockPanel.Dock="Right" Text="V" Width="30" Block.TextAlignment="Center"/>
-                                        <TextBox  Text="{Binding DisplayConfig.V, StringFormat={}{0:F1}}" BorderThickness="0,0,0,1"  Width="50"/>
-                                    </DockPanel>
-                                    <DockPanel>
-                                        <TextBlock  Text="{x:Static properties:Resources.I}" VerticalAlignment="Center"  HorizontalAlignment="Center"  Margin="0,0,5,0" />
-                                        <TextBlock  DockPanel.Dock="Right" Text="mA" Width="30" Block.TextAlignment="Center"/>
-                                        <TextBox  Text="{Binding DisplayConfig.I, StringFormat={}{0:F1}}" BorderThickness="0,0,0,1"  Width="50"/>
-                                        
-                                    </DockPanel>
-                                </StackPanel>
-                            </DockPanel>
+    
                             <DockPanel Margin="0,2" Visibility="{Binding Config.IsWithND,Converter={StaticResource bool2VisibilityConverter}}">
                                 <Button  DockPanel.Dock="Right" Content="Get"  Click="GetNDport_Click" />
                                 <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.ChangeNDPort}"  Click="NDport_Click" />
