--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
@@ -8,7 +8,7 @@
              xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:hc="https://handyorg.github.io/handycontrol"
-             xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
+             xmlns:properties ="clr-namespace:ColorVision.Engine.Properties" xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:ViewSpectrum}"
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource BorderBrush}"  Initialized="UserControl_Initialized">
@@ -19,7 +19,6 @@
             <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
             <Setter Property="ToolTip" Value="{ Binding Text,RelativeSource={RelativeSource Self}}"/>
         </Style>
-        <local:BoolToWidthConverter x:Key="BoolToWidthConverter"/>
     </UserControl.Resources>
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
@@ -53,6 +52,8 @@
                 </ToolBarTray>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <TextBlock Text="光通量模式" Margin="0,0,5,0"/>
+                    <ui:ToggleSwitch IsChecked="{Binding DisplayConfig.IsLuminousFluxMode}"  Margin="0,0,5,0"/>
                     <Button Click="Button_Click" Padding="2" Height="25" Width="25" Margin="0,1,5,0">
                         <Rectangle Width="16" Height="16" Fill="{StaticResource DISave}" />
                     </Button>
@@ -147,35 +148,35 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="EQE" Width="{Binding ConfigSpectrum.IsLuminousFluxMode, Converter={StaticResource BoolToWidthConverter}}">
+                            <GridViewColumn Header="EQE">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ViewResultEqe}">
                                         <TextBlock Text="{Binding Eqe, StringFormat={}{0:F4}}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="光通量(lm)" Width="{Binding ConfigSpectrum.IsLuminousFluxMode, Converter={StaticResource BoolToWidthConverter}}">
+                            <GridViewColumn Header="光通量(lm)">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ViewResultEqe}">
                                         <TextBlock Text="{Binding LuminousFlux, StringFormat={}{0:F4}}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="辐射通量(W)" Width="{Binding ConfigSpectrum.IsLuminousFluxMode, Converter={StaticResource BoolToWidthConverter}}">
+                            <GridViewColumn Header="辐射通量(W)" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ViewResultEqe}">
                                         <TextBlock Text="{Binding RadiantFlux, StringFormat={}{0:F6}}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="光效(lm/W)" Width="{Binding ConfigSpectrum.IsLuminousFluxMode, Converter={StaticResource BoolToWidthConverter}}">
+                            <GridViewColumn Header="光效(lm/W)">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ViewResultEqe}">
                                         <TextBlock Text="{Binding LuminousEfficacy, StringFormat={}{0:F4}}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="{x:Static properties:Resources.Lv}" Width="{Binding ConfigSpectrum.IsLuminousFluxMode, Converter={StaticResource BoolToWidthConverter}, ConverterParameter=Inverse}">
+                            <GridViewColumn  Header="{x:Static properties:Resources.Lv}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
                                         <TextBlock Text="{ Binding Lv}"/>
