--- a/Engine/ColorVision.Engine/Templates/Flow/NodePropertyEditorWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/NodePropertyEditorWindow.xaml
@@ -14,36 +14,23 @@
         Deactivated="Window_Deactivated"
         Activated="Window_Activated"
         Closed="Window_Closed">
-    <Grid>
+    <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
         <!-- Toggle button between property editor and SignStackPanel -->
-        <ToggleButton x:Name="ToggleEditMode" 
-                      Grid.Row="0" 
-                      Margin="5"
-                      Content="切换编辑模式"
-                      IsChecked="False"
-                      Checked="ToggleEditMode_Checked"
-                      Unchecked="ToggleEditMode_Unchecked"/>
-        
+        <ToggleButton x:Name="ToggleEditMode"  Content="切换编辑模式"  IsChecked="True"  Checked="ToggleEditMode_Checked" Unchecked="ToggleEditMode_Unchecked" HorizontalAlignment="Stretch"  Margin="0,0,0,5"/>
+
         <Grid Grid.Row="1">
-            <!-- Property Grid - shown when toggle is off -->
             <WindowsFormsHost x:Name="PropertyGridHost" 
-                              Visibility="Visible">
+                              Visibility="Collapsed">
                 <st:STNodePropertyGrid x:Name="STNodePropertyGrid1" />
             </WindowsFormsHost>
-            
-            <!-- SignStackPanel - shown when toggle is on -->
-            <ScrollViewer x:Name="SignStackScrollViewer" 
-                          Visibility="Collapsed"
-                          VerticalScrollBarVisibility="Auto"
-                          HorizontalScrollBarVisibility="Auto">
-                <StackPanel x:Name="SignStackPanelContainer" 
-                            Orientation="Vertical" 
-                            Margin="5"/>
+
+            <ScrollViewer x:Name="SignStackScrollViewer"  Visibility="Visible"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <StackPanel x:Name="SignStackPanelContainer"  Orientation="Vertical"/>
             </ScrollViewer>
         </Grid>
     </Grid>
