--- a/Plugins/Pattern/Ring/RingEditor.xaml
+++ b/Plugins/Pattern/Ring/RingEditor.xaml
@@ -8,7 +8,7 @@
              d:DataContext="{d:DesignInstance local:PatternRingConfig}"
              d:DesignHeight="450" d:DesignWidth="300" Initialized="UserControl_Initialized">
     <Grid>
-        <StackPanel VerticalAlignment="Top">
+        <StackPanel x:Name="StackPanelInfo" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal"  Margin="0,0,0,5">
                 <Button Content="主色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
                 <Rectangle x:Name="rectMainColor" Width="25" Height="25" Stroke="Black" Fill="{Binding MainBrush}" Margin="0,0,5,0"/>
@@ -27,17 +27,6 @@
                 <Button Content="W" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="W"/>
                 <Button Content="K" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="K"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Width="100" Text="RingWidth" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding  RingWidth}" Margin="0,0,5,0"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Width="100" Text="RingOffsets" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding  RingOffsets}" Margin="0,0,5,0"/>
-            </StackPanel>
-            <ToggleButton  Style="{StaticResource ToggleButtonSwitch}" Content="DrawCenterLine" Margin="0,0,2,0" IsChecked="{Binding DrawCenterLine}" HorizontalAlignment="Left"/>
-
         </StackPanel>
 
     </Grid>
