--- a/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/DisplaySMU.xaml
@@ -64,7 +64,7 @@
                         <ComboBox Name="CbChannel" Style="{StaticResource ComboBox.Small}"  SelectedValue="{Binding Config.Channel}"   />
                     </StackPanel>
 
-                    <StackPanel  Margin="0,0,0,3">
+                    <StackPanel  Margin="0,0,0,3" Visibility="{Binding Dis}">
 
                         <DockPanel  Margin="0,0,0,3" >
                             <TextBlock Text="{x:Static properties:Resources.SourceValue}" Margin="0,0,5,0" />
