--- a/Projects/ProjectARVR/ARVRWindow.xaml
+++ b/Projects/ProjectARVR/ARVRWindow.xaml
@@ -221,9 +221,9 @@
                     <Border Grid.Row="0" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="0,0,0,5">
                         <hc:StepBar Grid.Row="0" StepIndex="{Binding StepIndex}" Margin="-5,3,0,2">
                             <hc:StepBarItem Content="初始化"/>
+                            <hc:StepBarItem Content="WFow"/>
                             <hc:StepBarItem Content="White"/>
-                            <hc:StepBarItem Content="White2"/>
-                            <hc:StepBarItem Content="White1"/>
+                            <hc:StepBarItem Content="W1"/>
                             <hc:StepBarItem Content="Black"/>
                             <hc:StepBarItem Content="Chessboard"/>
                             <hc:StepBarItem Content="MTFH"/>
