--- a/UI/ColorVision.Solution/Plugins/PluginManagerWindow.xaml
+++ b/UI/ColorVision.Solution/Plugins/PluginManagerWindow.xaml
@@ -105,8 +105,9 @@
                         <Setter Property="ContextMenu" Value="{Binding ContextMenu}"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding HasUpdate}" Value="True">
-                                <Setter Property="Background" Value="#FFF3E0"/>
+                                <!--<Setter Property="Background" Value="#FFF3E0"/>-->
                                 <Setter Property="BorderBrush" Value="#FFA726"/>
+                                <!--<Setter Property="Foreground" Value="Black"/>-->
                                 <Setter Property="BorderThickness" Value="1"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -142,7 +143,7 @@
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Width="50" Text="{Binding AssemblyVersion}" Margin="0,0,5,0"/>
                                         <TextBlock  Width="50"  Text="{Binding LastVersion}"  Margin="0,0,5,0"/>
-                                        <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}" Visibility="{Binding PluginInfo.Enabled,Converter={StaticResource bool2VisibilityConverter}}" />
+                                        <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}" Visibility="{Binding HasUpdate,Converter={StaticResource bool2VisibilityConverter}}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
